--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -5,5 +5,15 @@
 
   <body>
     {{ content }}
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery.js"><\/script>')</script>
+    <!-- build:js(source) js/scripts.js -->
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
