--- a/source/_scss/style.scss
+++ b/source/_scss/style.scss
@@ -1,7 +1,10 @@
 @charset 'UTF-8';
 
 // NORMALIZE
-// @import 'vendor/normalize';
+@import 'vendor/normalize';
+
+// DAY-NIGHT-TOGGLE
+@import 'vendor/day-night-toggle';
 
 // CUSTOM STYLES
 @import 'custom-styles';
