--- a/source/_scss/_custom-styles.scss
+++ b/source/_scss/_custom-styles.scss
@@ -8,7 +8,7 @@ $susy: (
   // math: fluid,
   // output: float,
   // gutter-position: after,
-  container: 320px,
+  container: 90%,
   // container-position: center,
   columns: 12,
   gutters: 0.25,
@@ -16,7 +16,7 @@ $susy: (
   global-box-sizing: border-box,
   last-flow: to,
   debug: (
-    // image: show-columns,
+    image: show-columns,
     // color: rgba(#66f, .25),
     // output: background,
     // toggle: bottom left,
@@ -25,19 +25,66 @@ $susy: (
     // background-image: true,
     // background-options: false,
     // box-sizing: true,
-    // clearfix: false,
+    clearfix: true,
     // rem: true,
   )
 );
 
-body {
-  color: #fff;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
-  background-color: #000;
+// CLEARFIX MIXIN
+@mixin clearfix {
+  &:before,
+  &:after {
+    display: table;
+    content: ' ';
+  }
 
+  &:after {
+    clear: both;
+  }
 }
 
-.container {
-  @include container;
-  margin-top: 25%;
+// DEFAULT STYLES
+html {
+  font-family: "PT Sans", sans-serif;
+  line-height: 1.5;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+html,
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  font-size: 100%;
+}
+
+body {
+  color: #000;
+  background-color: #fff;
+  transition: all 3s ease-out;
+
+  &.night {
+    color: #fff;
+    background-color: #000;
+  }
+}
+
+a {
+  color: #268bd2;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
