--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,8 +9,8 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery.js"><\/script>')</script>
+    <!-- // <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+    <script src="js/vendor/zepto.min.js"></script>
     <!-- build:js(source) js/scripts.js -->
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
