--- a/source/_scss/_custom-styles.scss
+++ b/source/_scss/_custom-styles.scss
@@ -56,7 +56,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   padding: 0;
   margin: 0;
   font-size: 100%;
@@ -64,7 +64,9 @@ body {
 
 body {
   color: #000;
-  background-color: #fff;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: linear-gradient(#9EBCF2, #FFFFFF);
   transition: all 3s ease-out;
 
   &.night {
