--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,8 +9,7 @@
 
 
 
-    <!-- // <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
-    <script src="js/vendor/zepto.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- build:js(source) js/scripts.js -->
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
