--- a/source/_scss/_custom-styles.scss
+++ b/source/_scss/_custom-styles.scss
@@ -67,11 +67,13 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: linear-gradient(#9EBCF2, #FFFFFF);
-  transition: all 3s ease-out;
+}
 
-  &.night {
-    color: #fff;
-    background-color: #000;
+.night {
+
+  body {
+  background-image: linear-gradient(#000000, #412863);
+  color: #fff;
   }
 }
 
