--- a/source/_scss/_custom-styles.scss
+++ b/source/_scss/_custom-styles.scss
@@ -8,16 +8,16 @@ $susy: (
   // math: fluid,
   // output: float,
   // gutter-position: after,
-  container: 75em,
+  container: 60em,
   // container-position: center,
-  columns: 12,
-  gutters: 0.1,
+  columns: 2 1,
+  gutters: 0.05,
   // column-width: false,
   // global-box-sizing: content-box,
-  last-flow: to,
+  last-flow: 0to,
   debug: (
     image: show-columns,
-    // color: rgba(#66f, .25),
+    color: rgba(#66f, .25),
     // output: background,
     // toggle: bottom left,
   ),
@@ -64,9 +64,6 @@ body {
 
 body {
   color: #000;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: linear-gradient(#C0E6F6, #FFFFFF);
 }
 
 a {
@@ -86,20 +83,21 @@ img {
 }
 
 .container {
-  @include container;
+  @include container(60em);
+  margin-top: 1rem;
 }
 
 .fixed-content,
 .scroll-content {
   border: 1px solid #666;
   height: 200px;
-  margin-top: 1rem;
 }
 
 .scroll-content {
-  @include span(8 of 12);
+  @include span(1);
 }
+
 .fixed-content {
-  @include span(4 last);
+  @include span(1 last);
   height: 100%;
 }
