--- a/source/_scss/_custom-styles.scss
+++ b/source/_scss/_custom-styles.scss
@@ -109,72 +109,73 @@ $content-height: 100vh -  2 * $header-footer-height;
 
 .terminal {
   @include container;
+
+  &-button--close {
+    background-color: #FA6058;
+    border: 1px solid #F35C54;
+  }
+
+  &-button--minimize {
+    background-color: #FABD2E;
+    border: 1px solid #E0AF50;
+  }
+
+  &-button--maximize {
+    background-color: #28CA40;
+    border: 1px solid #1DC334;
+  }
 }
 
 .terminal__header {
-    height: 25px;
-    display: block;
-    background: linear-gradient(to bottom, #f7f7f7 0%,#cfcfcf 5%, #aaaaaa 100%);
-    border: 1px solid;
-    border-color: #9C9C9C #9C9C9C #111;
-    border-radius: 7px 7px 0 0;
-    position: relative;
+  height: 25px;
+  display: block;
+  background: linear-gradient(to bottom, #f7f7f7 0%,#cfcfcf 5%, #aaaaaa 100%);
+  border: 1px solid;
+  border-color: #9C9C9C #9C9C9C #111;
+  border-radius: 7px 7px 0 0;
+  position: relative;
 
-    &--controls {
-        position: absolute;
-        left: 10px;
-        top: 5px;
-        user-select: none;
+  &--controls {
+    position: absolute;
+    left: 10px;
+    top: 5px;
+    user-select: none;
 
-        button {
-            width: 13px;
-            height: 13px;
-            border-radius: 100%;
-            text-indent: -9999px;
-        }
+    button {
+      width: 13px;
+      height: 13px;
+      border-radius: 100%;
+      text-indent: -9999px;
     }
+  }
 }
 
-.btn--close {
-  background-color: #FA6058;
-  border: 1px solid #F35C54;
-}
 
-.btn--minimize {
-  background-color: #FABD2E;
-  border: 1px solid #E0AF50;
-}
-
-.btn--maximize {
-  background-color: #28CA40;
-  border: 1px solid #1DC334;
-}
 
 .terminal__shell {
-    font-family: "Liberation Mono", monospace;
-    height: 25vh;
-    font-size: 17px;
-    color: #FFEE58;
-    background-color: #3D3D3D;
-    overflow: hidden;
-    padding: 1.1rem;
-    border-radius: 0 0 7px 7px;
+  font-family: "Liberation Mono", monospace;
+  height: 25vh;
+  font-size: 17px;
+  color: #FFEE58;
+  background-color: #3D3D3D;
+  overflow: hidden;
+  padding: 1.1rem;
+  border-radius: 0 0 7px 7px;
 
-    p {
+  p {
     margin: 0;
     font-weight: bold;
-    }
+  }
 
+  &--path {
+    color: #29B6F6;
+    user-select: none;
+    padding-right: 0.6em;
+  }
 
-    &--path {
-        color: #29B6F6;
-        user-select: none;
-        padding-right: 0.6em;
-    }
-
-    &--prompt {
-        color: #EF5350;
-        user-select: none;
-        padding-right: 0.6em;
-    }
+  &--prompt {
+    color: #EF5350;
+    user-select: none;
+    padding-right: 0.6em;
+  }
 }
