Minor fixes in development workflow

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -11,7 +11,7 @@
     loadFont("webfonts", "/css/webfonts.woff.css", "/css/webfonts.woff2.css");
   </script>
   <noscript>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Liberation+Mono:400,700' rel='stylesheet' type='text/css'>
   </noscript>
 
   <!-- +++ CSS +++ -->
