Still fixing dev-workflow...

--- a/source/_scss/_custom-styles.scss
+++ b/source/_scss/_custom-styles.scss
@@ -149,7 +149,7 @@ $content-height: 100vh -  2 * $header-footer-height;
 }
 
 .terminal__shell {
-  font-family: "Ubuntu Mono", monospace;
+  font-family: "Liberation Mono", monospace;
   height: 25vh;
   font-size: 17px;
   color: #FFFFFF;
