--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -8,6 +8,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- build:js(source) js/scripts.js -->
+    <script src="js/_vendor/jquery-2.1.4.custom.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <!-- endbuild -->
