--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -23,7 +23,7 @@
   </script>
   <noscript>
   {% endif %}
-   <!-- build:css(source) css/style.css -->
+   <!-- build:css(.tmp) css/style.css -->
   <link href="css/style.css" rel="stylesheet" type="text/css">
    <!-- endbuild -->
   {% if site.environment == 'production' %}
