Added jQuery+Teletype building block

--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -30,4 +30,10 @@
   </noscript>
   {% endif %}
 
+  <!-- +++ JAVASCRIPT +++ -->
+  <!-- build:js(source) js/jquery-custom.teletype.js -->
+  <script src="js/_vendor/jquery-2.1.4.custom.js"></script>
+  <script src="js/_vendor/teletype.js"></script>
+  <!-- endbuild -->
+
 </head>
