Starting to implement SMACSS-like categories

--- a/source/_scss/style.scss
+++ b/source/_scss/style.scss
@@ -1,6 +1,11 @@
 @charset 'UTF-8';
 
-// NORMALIZE
+// GROUNDWORK
+@import 'variables';
+@import 'mixins';
+@import 'susy_map';
+
+// FIRST LAYER
 @import 'vendor/normalize';
 
 // CUSTOM STYLES
