Removing normalize for now, just unneccessary

--- a/source/_scss/style.scss
+++ b/source/_scss/style.scss
@@ -6,7 +6,7 @@
 @import 'susy_map';
 
 // FIRST LAYER
-@import 'vendor/normalize';
+// @import 'vendor/normalize';
 
-// CUSTOM STYLES
+// SECOND LAYER
 @import 'custom-styles';
