--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -31,9 +31,11 @@
   {% endif %}
 
   <!-- +++ JAVASCRIPT +++ -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="js/vendor/jquery-teletype.js"></script>
+
   <!-- build:js(source) js/jquery-custom.teletype.js -->
-  <script src="js/_vendor/jquery-2.1.4.custom.js"></script>
-  <script src="js/_vendor/teletype.js"></script>
+
   <!-- endbuild -->
 
 </head>
