--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -33,9 +33,24 @@
   <!-- +++ JAVASCRIPT +++ -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="js/vendor/jquery-teletype.js"></script>
-
-  <!-- build:js(source) js/jquery-custom.teletype.js -->
+  <!-- build:js(source) js/daktylos.js -->
 
   <!-- endbuild -->
-
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $( '.type-text' ).each( function() {
+        var items = $( this ).attr( 'title' ) + ';' + $( this ).text();
+        var thing = $( this ).empty().attr( 'title', '' ).teletype( {
+          text: items.split( ';' ),
+          typeDelay: 10,
+          backDelay: 20,
+          cursor: '_',
+          delay: 3000,
+          preserve: true,
+          prefix: '<span class="terminal__shell--path">[daktylos.net ~]</span><span class="terminal__shell--prompt">$</span>',
+          loop: 1
+        });
+      });
+    });
+  </script>
 </head>
