--- a/source/_scss/modules/_terminal.scss
+++ b/source/_scss/modules/_terminal.scss
@@ -50,7 +50,7 @@
 }
 
 .terminal__shell {
-  height: 15rem;
+  height: $content-height - $header-footer-height * 2;
   padding: 1.1rem;
   overflow: hidden;
   font-size: 17px;
