--- a/source/assets/styles/utility/_susy_map.scss
+++ b/source/assets/styles/utility/_susy_map.scss
@@ -4,7 +4,7 @@ $susy: (
   // math: fluid,
   // output: float,
   // gutter-position: after,
-  container: 60em,
+  container: 90%,
   // container-position: center,
   columns: 12,
   gutters: 0,
