--- a/source/assets/styles/utility/_variables.scss
+++ b/source/assets/styles/utility/_variables.scss
@@ -1,4 +1,6 @@
-// VARIABLES
+//
+// Variables
+//
 
-$header-footer-height: 10vh;
+$header-footer-height: 20vh;
 $content-height: 100vh -  2 * $header-footer-height;
