--- a/source/assets/styles/base/_globals.scss
+++ b/source/assets/styles/base/_globals.scss
@@ -12,28 +12,58 @@
 *:after {
   box-sizing: inherit; }
 
-html {
-  font-family: "Liberation Mono";
-  line-height: 1.5;
-  box-sizing: border-box;
-}
-
 html,
 body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
+  min-height: 100vh;
   font-size: 100%;
+  box-sizing: border-box;
 }
 
 body {
   position: relative;
+  background: color(brownBackground);
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  font-family: 'Liberation Mono', Courier, monospace;
+  font-weight: normal;
+  line-height: 1.5;
   color: #000000;
-  text-size-adjust: 100%;
-  background: #efebe9;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
   text-decoration: none;
-  transition: .25s;
+  outline: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  -ms-interpolation-mode: bicubic;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  padding: 0;
+  border: 0;
+  border-radius: $global-radius;
+  line-height: 1;
+}
+
+textarea {
+  height: auto;
+  min-height: 50px;
+  border-radius: 5px;
+}
+
+select {
+  width: 100%;
+  border-radius: 5px;
 }
