--- a/source/assets/styles/layout/_header-content-footer.scss
+++ b/source/assets/styles/layout/_header-content-footer.scss
@@ -1,31 +1,28 @@
 // HEADER - CONTENT - FOOTER STYLES
 
-
-
 .container {
   @include container;
 }
 
-
-#site-header {
-  padding-top: 40px;
-  height: 160px;
-  background-color: #5d4037;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+header {
+  padding-top: 32px;
+  height: 128px;
+  background-color: color(brownSecondary);
+  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
+  z-index: z(header);
 }
 
 .primary-nav {
-  background-color: #795548;
-  height: 120px;
+  background-color: color(brownPrimary);
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
 
   a {
-    padding: 30px 20px;
+    padding: 28px 32px;
     text-decoration: none;
     color: #fff;
     font-size: 40px;
+    transition: .25s;
+    line-height: 1;
 
     &.active,
     &:hover {
@@ -34,49 +31,72 @@
   }
 }
 
-svg {
-  width: 500px;
-  height: auto;
+.beam-me-up {
+  position: relative;
+  display: block;
 
-  // path {
-  //   opacity: 1;
-  //   transition: .25s;
-  // }
-  //
-  // #tree:hover {
-  //   opacity: 1;
-  // }
-  //
-  // #sloth:hover {
-  //   opacity:  1;
-  // }
-  //
-  // &:hover > path {
-  //   opacity: 0.35;
-  // }
+  &__bubble {
+    opacity: 0;
+    transition: .25s;
+    background-color: color(greenPrimary);
+    position: absolute;
+    left: -160px;
+    bottom: 100px;
+    color: #FFF;
+    padding: 10px;
+    border-radius: 15px;
+    font-size: 22px;
+
+    &::after {
+      content: "";
+      width: 0px;
+      height: 0px;
+      margin-right: -16px;
+      position: absolute;
+      bottom: 22%;
+      right: 0px;
+      border-left: 16px solid #4caf50;
+      border-top: 16px solid transparent;
+      border-bottom: 4px solid transparent;
+      border-right: 0px none;
+    }
+  }
+
+  &:hover &__bubble {
+    opacity: 1;
+  }
 }
 
 
+main {
+  flex: 1;
+  display: flex;
 
+  a {
+    color: #4CAF50;
 
-#content {
-  @include span(7 of 10 last);
-  height: 2000px;
-  // height: $content-height;
-  // padding-top: $header-footer-height / 2;
-  // background-attachment: fixed;
-  // background-image: url('/img/bg.jpg');
-  // background-position: center;
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // padding-right: 240px;
+    &:hover {
+      color: color(greenSecondary);
+    }
+  }
 }
 
-#sidebar {
-  @include span(3 of 10);
+article {
+  flex: 1;
+  padding: 40px 25px;
 
 }
 
-#site-footer {
-  height: $header-footer-height;
+aside {
+  flex: 0 0 400px;
+}
+
+.sidebar-wrap {
+  width: 100%;
+}
+
+footer {
+  background-color: #5D4037;
+  color: #FFF;
+  flex: 0 0 480px;
 }
