--- a/source/assets/styles/main.scss
+++ b/source/assets/styles/main.scss
@@ -1,20 +1,21 @@
 @charset "utf-8";
 
-// For information about Foundation6 and Sass, see: http://foundation.zurb.com/sites/docs/sass.html
-// Local copy of Foundation6 settings file
-@import 'foundation-settings';
-
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 @import "../../../bower_components/foundation-sites/scss/foundation.scss";
 @import "../../../bower_components/susy/sass/_susy.scss";
 // endbower
 
+
+// For information about Foundation6 and Sass, see: http://foundation.zurb.com/sites/docs/sass.html
+// Local copy of Foundation6 settings file
+// @import 'foundation-settings';
+
 // Use this to include all Foundation6 sass files ...
 // @include foundation-everything;
 
 // ... or only the ones you need
-@include foundation-global-styles;
+// @include foundation-global-styles;
 // @include foundation-grid;
 // @include foundation-typography;
 // @include foundation-button;
@@ -40,7 +41,7 @@
 // @include foundation-pagination;
 // @include foundation-progress-bar;
 // @include foundation-slider;
-@include foundation-sticky;
+// @include foundation-sticky;
 // @include foundation-reveal;
 // @include foundation-switch;
 // @include foundation-table;
@@ -49,6 +50,10 @@
 // @include foundation-title-bar;
 // @include foundation-tooltip;
 // @include foundation-top-bar;
+
+
+// Load normalize.css
+@include -zf-normalize;
 
 // Import your own partials here
 @import
@@ -62,3 +67,10 @@
   // 'layout/footer'
   'layout/header-content-footer'
 ;
+
+@include foundation-sticky;
+
+// These styles are applied to a <meta> tag, which is read by the Foundation JavaScript
+.foundation-mq {
+  font-family: '#{-zf-bp-serialize($breakpoints)}';
+}
