--- a/source/assets/styles/utility/_variables.scss
+++ b/source/assets/styles/utility/_variables.scss
@@ -2,5 +2,24 @@
 // Variables
 //
 
-$header-footer-height: 20vh;
-$content-height: 100vh -  2 * $header-footer-height;
+$breakpoints: (
+  small: 0,
+  medium: 640px,
+  large: 1024px,
+  xlarge: 1200px,
+  xxlarge: 1440px,
+);
+
+$colors: (
+  brownPrimary: #795548,
+  brownSecondary: #5D4037,
+  brownBackground: #EFEBE9,
+  greenPrimary: #4CAF50,
+  greenSecondary: #388E3C,
+  greenFallback: #1B5E20
+);
+
+$z-layers: (
+  default: 1,
+  header: 2
+);
