Getting ready for webpack

--- a/source/assets/styles/utility/_variables.scss
+++ b/source/assets/styles/utility/_variables.scss
@@ -18,7 +18,10 @@ $breakpoints: (
   large: 64em,
   xlarge: 80em,
   xxlarge: 1440px,
+  logo-breakMax: 39.938em,
+  logo-break: 40em
 );
+
 
 
 /*
