--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -1,41 +1,13 @@
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="description" content="{{ site.descripton }}" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{{ page.title }} - {{ site.title }}</title>
-  <!-- +++ WEBFONTS +++ -->
-  <!-- <script>
-    {% include fontloader.js %}
-    loadFont("webfonts", "/assets/fonts/webfonts.woff.css", "assets/fonts/webfonts.woff2.css");
-  </script>
-  <noscript>
-    <link href='http://fonts.googleapis.com/css?family=Liberation+Mono:400,700' rel='stylesheet' type='text/css'>
-  </noscript> -->
+  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <!-- +++ CSS +++ -->
-  <!-- inject:css
-  <link rel="stylesheet" href="/assets/styles/main.css">
-  endinject -->
-
-  <style media="screen">
-    {% include main.css %}
-  </style>
-  <!-- +++ Piwik +++ -->
-  <!-- <script type="text/javascript">
-    var _paq = _paq || [];
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-      var u="//martinfolkers.de/piwik/";
-      _paq.push(['setTrackerUrl', u+'piwik.php']);
-      _paq.push(['setSiteId', 1]);
-      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-    })();
-  </script>
-  <noscript><p><img src="//martinfolkers.de/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript> -->
-  <!-- End Piwik Code -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+  <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="shortcut icon" href="{{ favicon.ico | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url">
+  <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico"> -->
 </head>
