--- a/source/assets/styles/layout/_header.scss
+++ b/source/assets/styles/layout/_header.scss
@@ -40,7 +40,7 @@
     width: 300px;
     height: 80px;
 
-    @include respond-max(smallMax) {
+    @include respond-max(logo-breakMax) {
       display: none;
     }
   }
@@ -49,7 +49,7 @@
     width: 80px;
     height: 80px;
 
-    @include respond-min(small) {
+    @include respond-min(logo-break) {
       display: none;
     }
   }
